--- a/src/css/archive.css
+++ b/src/css/archive.css
@@ -36,7 +36,7 @@
     &::before {
         content: '';
         position: absolute;
-        top: 3px;
+        top: 2px;
         left: -14px;
         width: 3px;
         height: 16px;
