--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,7 +7,6 @@
     width: 100%;
     position: fixed;
     background: rgba(255,255,255,1);
-    overflow: hidden;
     transition: all 0.3s ease;
     z-index: 999;
 }
@@ -18,23 +17,46 @@
     height: 100px;
     margin: 0 auto;
     padding: 0 20px;
-    overflow: visible;
     z-index: 3;
     transition: all 0.3s ease;
 }
 
-.header__normal,
-.header__post {
+.header__normal {
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 100%;
+    z-index: 1;
+    transition: all 0.3s ease;
+}
+
+.header__post-hidden {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 0;
+    .header__post-visible {
+        width: 100%;
+        height: 100%;
+        overflow: visible;
+        transition: all 0.3s ease;
+    }
+    .header__post-holder {
+        height: 100%;
+    }
 }
 
 .header--switch {
-    transform: translateY(-100%);
+    .header__normal,
+    .header__post-visible {
+        transform: translateY(-100%);
+    }
 }
 
 .header-wrapper .left {
@@ -67,19 +89,48 @@
     }
 }
 
-.header__post .header__name {
-    &::before {
-        content: '';
-        position: absolute;
-        top: 3px;
-        left: -14px;
-        width: 3px;
-        height: 16px;
-        background: var(--primary-color);
+.header__post {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 0 20px;
+    .left {
+
+    }
+    .header__name {
+        &::before {
+            content: '';
+            position: absolute;
+            top: 2px;
+            left: -14px;
+            width: 3px;
+            height: 16px;
+            background: var(--primary-color);
+        }
+    }
+    .right {
+        font-size: 0.875rem;
+        color: var(--normal-text-color);
+        .share-links {
+            display: inline-block;
+            list-style-type: none;
+        }
+        .share-link {
+            display: inline-block;
+            padding: 0 12px;
+            line-height: 28px;
+            border: 1px solid #eaeaea;
+            border-radius: 15px;
+            font-size: 0.875rem;
+            color: var(--normal-text-color);
+        }
     }
 }
 
-.header-wrapper .right {
+.header-wrapper .menu-list {
     list-style-type: none;
     display: inline-block;
     >li {
@@ -378,7 +429,7 @@
             color: rgba(255,255,255,0.8);
         }
     }
-    .right {
+    .menu-list {
         .normal-menu,
         .category {
             color: rgba(255,255,255,0.8);
@@ -410,7 +461,7 @@
             color: var(--normal-text-color);
         }
     }
-    .right {
+    .menu-list {
         .normal-menu,
         .category {
             height: 60px;
